<?xml version="1.0"?>
<package format="2">
  <name>gps</name>
  <version>0.0.0</version>
  <description>The gps package</description>
  <maintainer email="jcherubino@todo.todo">jcherubino</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>

</package>
